[gd_scene load_steps=73 format=3 uid="uid://b1b1jbm27ukdx"]

[ext_resource type="Script" uid="uid://cqst0cvtv3stx" path="res://Script/Entity/Door-Entity01.gd" id="1_l5meu"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_qx8wa"]
[ext_resource type="Script" uid="uid://bqj6ilxtw1wqg" path="res://Script/MouseToggle3D.gd" id="1_un1av"]
[ext_resource type="Script" uid="uid://cb2nyxoek5i5k" path="res://Script/BehaviourScript/DoorBehaviour.gd" id="2_3qx2e"]
[ext_resource type="Script" uid="uid://knn4iw25lrv4" path="res://Script/Entity/DoorEntityHandler.gd" id="2_arxn4"]
[ext_resource type="Texture2D" uid="uid://bwkgpvr6ce8h4" path="res://Assets/eye.png" id="2_kppom"]
[ext_resource type="PackedScene" uid="uid://csbibxl84cpb5" path="res://Prototype/OneOpenSlot.tscn" id="2_t3t22"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="2_un1av"]
[ext_resource type="Script" uid="uid://qvjjtjy3wtmw" path="res://Script/Entity/Entiity02Path.gd" id="3_a5tng"]
[ext_resource type="Script" uid="uid://d3siljx3ofq0" path="res://Script/BehaviourScript/WindowBehavior.gd" id="3_ao232"]
[ext_resource type="PackedScene" uid="uid://7cyeq0hpfw24" path="res://Prototype/ListenBoard.tscn" id="3_cnpjd"]
[ext_resource type="AudioStream" uid="uid://cxdr82h60s3jb" path="res://SoundTracks/Sfx/eerie-ominous-alarm-192225.mp3" id="3_kppom"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_t3t22"]
[ext_resource type="Script" uid="uid://c02tfkeu002hj" path="res://Script/BehaviourScript/TvBehavior.gd" id="4_38qtl"]
[ext_resource type="Script" uid="uid://b8hhnqsugykly" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="4_cnpjd"]
[ext_resource type="Script" uid="uid://c52ajb4ffgkoo" path="res://Script/Entity/WindowEntityHandler.gd" id="5_bin58"]
[ext_resource type="Script" uid="uid://bsv8kiofglvdk" path="res://Script/Entity/TVEntityHandler.gd" id="7_6my3x"]
[ext_resource type="Script" uid="uid://b0yjh4t0goaoa" path="res://Script/MainCameraBehaviour.gd" id="8_8mw6g"]
[ext_resource type="PackedScene" uid="uid://wnblk824usty" path="res://MainScene/Laptop/MainLaptop.tscn" id="8_84mbk"]
[ext_resource type="Script" uid="uid://cpw1rcpnwcxk2" path="res://Script/Mechanics/RoomStats.gd" id="9_4tci8"]
[ext_resource type="Script" uid="uid://cw4k61k0eu6do" path="res://Script/LaptopSlot.gd" id="9_qomca"]
[ext_resource type="Script" uid="uid://cc0bgrwy122ai" path="res://Script/Mechanics/PlayerStats.gd" id="10_k0fsr"]
[ext_resource type="Script" uid="uid://d7mbaterk8d5" path="res://Script/Mechanics/TimeElapsed.gd" id="11_vfrrt"]
[ext_resource type="PackedScene" uid="uid://ckk4s6gjgqv5j" path="res://MainScene/SubScene/PostProcessor.tscn" id="14_6my3x"]
[ext_resource type="PackedScene" uid="uid://snqvdh8kv1v2" path="res://Prototype/Debugerr.tscn" id="15_ao232"]
[ext_resource type="Script" uid="uid://cuffvge5ad4aa" path="res://addons/phantom_camera/scripts/resources/phantom_camera_noise_3d.gd" id="16_aaaiw"]
[ext_resource type="Script" uid="uid://n1bp3uja5r2" path="res://Script/Mechanics/EnitityManager.gd" id="17_nm3el"]
[ext_resource type="PackedScene" uid="uid://etw6arbwyd0r" path="res://Assets/3DAsset/Room.blend" id="27_l5meu"]

[sub_resource type="Curve3D" id="Curve3D_aaaiw"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -4.2137723, 0, -7.3168907, -0.17218208, 0, -1.7648704, 0.17218208, 0, 1.7648704, -3.8909297, 0, -0.7762424, 0, 0, 0, 0, 0, 0, -2.7886922, 0, 0.7760518),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="AtlasTexture" id="AtlasTexture_l5meu"]
atlas = ExtResource("2_kppom")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5tng"]
atlas = ExtResource("2_kppom")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qhqt"]
atlas = ExtResource("2_kppom")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw5mf"]
atlas = ExtResource("2_kppom")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqmni"]
atlas = ExtResource("2_kppom")
region = Rect2(256, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwdt4"]
atlas = ExtResource("2_kppom")
region = Rect2(320, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc7p8"]
atlas = ExtResource("2_kppom")
region = Rect2(384, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnivo"]
atlas = ExtResource("2_kppom")
region = Rect2(448, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0dk7"]
atlas = ExtResource("2_kppom")
region = Rect2(512, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qkt8"]
atlas = ExtResource("2_kppom")
region = Rect2(576, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1v7q"]
atlas = ExtResource("2_kppom")
region = Rect2(640, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb0mt"]
atlas = ExtResource("2_kppom")
region = Rect2(704, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_774l7"]
atlas = ExtResource("2_kppom")
region = Rect2(768, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n77d"]
atlas = ExtResource("2_kppom")
region = Rect2(832, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l476n"]
atlas = ExtResource("2_kppom")
region = Rect2(896, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yap8k"]
atlas = ExtResource("2_kppom")
region = Rect2(960, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbknu"]
atlas = ExtResource("2_kppom")
region = Rect2(1024, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_41g2q"]
atlas = ExtResource("2_kppom")
region = Rect2(1088, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0crx"]
atlas = ExtResource("2_kppom")
region = Rect2(1152, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0av5"]
atlas = ExtResource("2_kppom")
region = Rect2(1216, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks27g"]
atlas = ExtResource("2_kppom")
region = Rect2(1280, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wohb"]
atlas = ExtResource("2_kppom")
region = Rect2(1344, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcvkl"]
atlas = ExtResource("2_kppom")
region = Rect2(1408, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ekbx"]
atlas = ExtResource("2_kppom")
region = Rect2(1472, 0, 64, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_tlt85"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5meu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5tng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qhqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw5mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqmni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwdt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc7p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnivo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0dk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qkt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1v7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb0mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_774l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n77d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l476n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yap8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbknu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41g2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0crx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0av5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks27g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wohb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcvkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ekbx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve3D" id="Curve3D_l5meu"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -10.705186, 0, 1.2908733, 0, 0, 0, 0, 0, 0, -0.5213884, 0, 1.2908738),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_kppom"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 10.320593, 0, 1.2908733, 0, 0, 0, 0, 0, 0, 0.47463143, 0, 1.2908738),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_h44r7"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 9.724819, 0, -8.232769, 1.9585762, 0, -1.6572564, -1.9585762, 0, 1.6572564, 7.5725384, 0, -1.8751067, 0, 0, 0, 0, 0, 0, 2.5203404, 0, 0.2526932),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="PlaneMesh" id="PlaneMesh_ih12l"]
size = Vector2(9.725, 7.49)

[sub_resource type="BoxShape3D" id="BoxShape3D_s6imy"]
size = Vector3(0.16552734, 1.2433777, 1)

[sub_resource type="QuadMesh" id="QuadMesh_8mw6g"]
size = Vector2(1, 1.435)

[sub_resource type="BoxShape3D" id="BoxShape3D_ueye7"]
size = Vector3(0.6141205, 0.9561615, 1.9740753)

[sub_resource type="QuadMesh" id="QuadMesh_qx8wa"]
size = Vector2(2.26, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_t3t22"]
size = Vector3(0.99972534, 0.9561615, 0.4547119)

[sub_resource type="QuadMesh" id="QuadMesh_cnpjd"]

[sub_resource type="GDScript" id="GDScript_84mbk"]
script/source = "extends Node

@onready var laptop_container = $LaptopContainer

func _ready() -> void:
	assert(laptop_container)
	
	_hide_laptop()

func _hide_laptop():
	remove_child(laptop_container)
	
func _show_laptop():
	if not laptop_container.is_inside_tree():
		add_child(laptop_container)


func _laptop_slot_interacted(is_active: bool) -> void:
	if is_active:
		_show_laptop();
	else:
		_hide_laptop();
	pass # Replace with function body.
"

[sub_resource type="Resource" id="Resource_mfvvt"]
script = ExtResource("3_t3t22")
duration = 0.0

[sub_resource type="Resource" id="Resource_4tci8"]
script = ExtResource("4_cnpjd")
fov = 80.0
metadata/_custom_type_script = "uid://b8hhnqsugykly"

[sub_resource type="Resource" id="Resource_h44r7"]
script = ExtResource("16_aaaiw")
amplitude = 5.0
frequency = 0.1
randomize_noise_seed = 1
rotational_multiplier_y = 0.0
rotational_multiplier_z = 0.0
metadata/_custom_type_script = "uid://cuffvge5ad4aa"

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_un1av"]

[sub_resource type="Sky" id="Sky_t3t22"]
sky_material = SubResource("ProceduralSkyMaterial_un1av")

[sub_resource type="Environment" id="Environment_cnpjd"]
background_mode = 2
background_energy_multiplier = 0.2
sky = SubResource("Sky_t3t22")

[sub_resource type="Curve" id="Curve_aaaiw"]
_limits = [-0.7, 0.71, 0.0, 1.0]
_data = [Vector2(0, -0.6615455), 0.0, 0.0, 0, 0, Vector2(0.25684932, -0.071038604), 2.0843046, 2.0843046, 0, 0, Vector2(0.46757674, 0.39088446), 1.1858647, 1.1858647, 0, 0, Vector2(0.8361774, 0.6078831), 0.0, 0.0, 0, 0, Vector2(1, 0.71), 0.0, 0.0, 0, 0]
point_count = 5

[node name="DummyDay" type="Node3D"]

[node name="MovingObjects" type="Node" parent="."]

[node name="Door-Entity01" type="Path3D" parent="MovingObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
curve = SubResource("Curve3D_aaaiw")

[node name="PathFollow3D" type="PathFollow3D" parent="MovingObjects/Door-Entity01"]
transform = Transform3D(-0.59813106, 0, -0.80136305, 0, 1, 0, 0.80136305, 0, -0.59813106, -3.314482, 0, 0.6341421)
progress = 8.112154
script = ExtResource("1_l5meu")
y_range = 0.2
speed = 1.5
fade_speed = 0.4
max_energy = 1.0

[node name="Light" type="OmniLight3D" parent="MovingObjects/Door-Entity01/PathFollow3D"]
transform = Transform3D(1.000009, 0, 0, 0, 1, 0, 0, 0, 1.000009, 0, 0, 0)
light_color = Color(0.89886194, 0.221602, 0.3018036, 1)
light_energy = 0.9215718
light_specular = 1.085
shadow_enabled = true
omni_range = 2.862

[node name="Sprite" type="AnimatedSprite3D" parent="MovingObjects/Door-Entity01/PathFollow3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19887318, 0)
billboard = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_tlt85")
frame_progress = 0.46002063

[node name="Door-Entity02" type="Path3D" parent="MovingObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
curve = SubResource("Curve3D_l5meu")

[node name="PathFollow3D" type="PathFollow3D" parent="MovingObjects/Door-Entity02"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -0.5213884, 0, 1.2908739)
progress = 10.183796
script = ExtResource("3_a5tng")

[node name="audio" type="AudioStreamPlayer3D" parent="MovingObjects/Door-Entity02/PathFollow3D"]
stream = ExtResource("3_kppom")
volume_db = -10.0
pitch_scale = 0.7
max_distance = 10.0
panning_strength = 0.0
bus = &"SFX"

[node name="Window-Entity02" type="Path3D" parent="MovingObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
curve = SubResource("Curve3D_kppom")

[node name="PathFollow3D" type="PathFollow3D" parent="MovingObjects/Window-Entity02"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.47463137, 0, 1.2908739)
progress = 9.84596
script = ExtResource("3_a5tng")

[node name="audio" type="AudioStreamPlayer3D" parent="MovingObjects/Window-Entity02/PathFollow3D"]
stream = ExtResource("3_kppom")
volume_db = -10.0
pitch_scale = 0.7
max_distance = 10.0
panning_strength = 0.0
bus = &"SFX"

[node name="Window-Entity01" type="Path3D" parent="MovingObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.77867275, 0)
curve = SubResource("Curve3D_h44r7")

[node name="PathFollow3D" type="PathFollow3D" parent="MovingObjects/Window-Entity01"]
transform = Transform3D(-0.39095443, 0, 0.92038494, 0, 0.99999976, 0, -0.92038494, 0, -0.39095443, 5.42481, 0, -0.6006759)
progress = 9.368845
script = ExtResource("1_l5meu")
y_range = 0.2
speed = 1.0
fade_speed = 0.3
max_energy = 3.0

[node name="Light" type="OmniLight3D" parent="MovingObjects/Window-Entity01/PathFollow3D"]
transform = Transform3D(1.000009, 0, 0, 0, 1, 0, 0, 0, 1.000009, 0, 0, 0)
light_color = Color(0.89886194, 0.221602, 0.3018036, 1)
light_energy = 2.0836382
light_specular = 1.085
shadow_enabled = true
omni_range = 3.0

[node name="Sprite" type="AnimatedSprite3D" parent="MovingObjects/Window-Entity01/PathFollow3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.16569692, 0)
billboard = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_tlt85")
frame_progress = 0.46002063

[node name="Environment" type="Node" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1.7406123, 0, 0, 0, 1, 0, 0, 0, 2.1257133, 0, -0.13499916, -2.3566241)
mesh = SubResource("PlaneMesh_ih12l")

[node name="Room" parent="Environment" instance=ExtResource("27_l5meu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.27465343, 0, 0.13791037)
visible = false

[node name="Interactables" type="Node" parent="."]

[node name="Door" type="Area3D" parent="Interactables" node_paths=PackedStringArray("call_objects")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.7296712, 0, 0.58637893)
collision_layer = 15
script = ExtResource("1_un1av")
call_objects = [NodePath("Controller")]

[node name="EntityHandler" type="Node" parent="Interactables/Door" node_paths=PackedStringArray("_door_state", "entity_01", "entity_02", "entity_manager")]
script = ExtResource("2_arxn4")
__entity_01 = 0.55
__entity_02 = 0.6
__none = 0.79
_door_state = NodePath("../Controller")
entity_01 = NodePath("../../../MovingObjects/Door-Entity01/PathFollow3D")
entity_02 = NodePath("../../../MovingObjects/Door-Entity02/PathFollow3D")
entity_manager = NodePath("../../../System/EntityManager")

[node name="Controller" type="Node" parent="Interactables/Door" node_paths=PackedStringArray("model")]
script = ExtResource("2_3qx2e")
model = NodePath("../MeshInstance3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactables/Door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0)
shape = SubResource("BoxShape3D_s6imy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Interactables/Door"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0.6044543, 0)
mesh = SubResource("QuadMesh_8mw6g")

[node name="Window" type="Area3D" parent="Interactables" node_paths=PackedStringArray("call_objects")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.3974288, 0, 1.0571984)
script = ExtResource("1_un1av")
hold_and_release = true
call_objects = [NodePath("Controller")]

[node name="EntityHandler" type="Node" parent="Interactables/Window" node_paths=PackedStringArray("_window_state", "_entity_01", "_entity_02", "entity_manager")]
script = ExtResource("5_bin58")
__entity_01 = 0.51
__entity_02 = 0.51
__none = 0.75
_window_state = NodePath("../Controller")
_entity_01 = NodePath("../../../MovingObjects/Window-Entity01/PathFollow3D")
_entity_02 = NodePath("../../../MovingObjects/Window-Entity02/PathFollow3D")
entity_manager = NodePath("../../../System/EntityManager")

[node name="Controller" type="Node" parent="Interactables/Window" node_paths=PackedStringArray("model")]
script = ExtResource("3_ao232")
model = NodePath("../MeshInstance3D")
weight = 0.81
z_target = -1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactables/Window"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.19280243, 0.84, -0.4235611)
shape = SubResource("BoxShape3D_ueye7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Interactables/Window"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -0.08693218, 0.83054936, 0.7132511)
mesh = SubResource("QuadMesh_qx8wa")

[node name="TV" type="Area3D" parent="Interactables" node_paths=PackedStringArray("call_objects")]
transform = Transform3D(1, 0, 0, 0, 0.9788781, -0.20444481, 0, 0.20444481, 0.9788781, 0, 1.1152905, -2.5971837)
collision_layer = 2
script = ExtResource("1_un1av")
call_objects = [NodePath("Controller")]

[node name="EntityHandler" type="Node" parent="Interactables/TV" node_paths=PackedStringArray("_tv_state", "entity_manager")]
script = ExtResource("7_6my3x")
__entity_404 = 0.4
_tv_state = NodePath("../Controller")
entity_manager = NodePath("../../../System/EntityManager")

[node name="Controller" type="Node" parent="Interactables/TV" node_paths=PackedStringArray("model")]
script = ExtResource("4_38qtl")
model = NodePath("../MeshInstance3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactables/TV"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.015365601, 0, 0)
shape = SubResource("BoxShape3D_t3t22")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Interactables/TV"]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 0, 0)
mesh = SubResource("QuadMesh_cnpjd")

[node name="MouseListener" type="Node" parent="."]
script = SubResource("GDScript_84mbk")

[node name="OneOpenSlot" parent="MouseListener" instance=ExtResource("2_t3t22")]
anchor_top = 0.901
anchor_bottom = 1.0
offset_top = 0.15197754
offset_bottom = 0.0
script = ExtResource("9_qomca")

[node name="ListenBoard" parent="MouseListener" instance=ExtResource("3_cnpjd")]
anchors_preset = -1
anchor_bottom = 0.79
offset_bottom = 0.07998657

[node name="LaptopContainer" type="Control" parent="MouseListener"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.88900006
offset_bottom = -0.072021484
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MainLaptop" parent="MouseListener/LaptopContainer" instance=ExtResource("8_84mbk")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.083000004
anchor_top = 0.069000006
anchor_right = 0.91700006
offset_left = 0.38399506
offset_top = 0.2559929
offset_right = 191.61597
offset_bottom = 112.0
scale = Vector2(0.83, 0.83)
mouse_filter = 2

[node name="Lights&Cams" type="Node" parent="."]

[node name="Camera3D" type="Camera3D" parent="Lights&Cams"]
transform = Transform3D(1, 0, 0, 0, 0.99965173, -0.026390376, 0, 0.026390376, 0.99965173, 0, 0.5700433, 1.7777451)
top_level = true
fov = 80.0

[node name="PhantomCameraHost" type="Node" parent="Lights&Cams/Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("1_qx8wa")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="PhantomCamera3D" type="Node3D" parent="Lights&Cams"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5700433, 1.7777451)
script = ExtResource("2_un1av")
tween_resource = SubResource("Resource_mfvvt")
tween_on_load = false
camera_3d_resource = SubResource("Resource_4tci8")
noise = SubResource("Resource_h44r7")
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="WorldEnvironment" type="WorldEnvironment" parent="Lights&Cams"]
environment = SubResource("Environment_cnpjd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lights&Cams"]
transform = Transform3D(1, 0, 0, 0, -0.060107797, -0.9981919, 0, 0.9981919, -0.060107797, 0, -2.168065, 0)
shadow_enabled = true

[node name="VignetteScreen" parent="Lights&Cams" instance=ExtResource("14_6my3x")]
z_index = 10
_falloff = 0.05
_samples = 15
_inner_radius = 0.735
_vignette_strength = 6.23

[node name="SpotLight3D" type="SpotLight3D" parent="Lights&Cams"]
transform = Transform3D(0.32715806, -0.56282514, 0.75907546, 0.08434912, 0.8174668, 0.56976604, -0.9411976, -0.122376196, 0.31491464, 4.743916, 2.5496306, 1.4717119)
shadow_enabled = true

[node name="System" type="Node" parent="."]

[node name="CameraController" type="Node" parent="System" node_paths=PackedStringArray("camera_ref", "slot_node_ref")]
script = ExtResource("8_8mw6g")
camera_ref = NodePath("../../Lights&Cams/PhantomCamera3D")
camera_state = 2
max_left_angle = 40.0
max_right_angle = -40.0
transition_speed = 50.0
slot_node_ref = NodePath("../../MouseListener/OneOpenSlot")
left_angle_bounds = -15.0
right_angle_bounds = 15.0

[node name="RoomSystem" type="Node" parent="System" node_paths=PackedStringArray("player_stat_node", "door", "tv", "window")]
script = ExtResource("9_4tci8")
player_stat_node = NodePath("../PlayerManager")
door = NodePath("../../Interactables/Door/Controller")
tv = NodePath("../../Interactables/TV/Controller")
window = NodePath("../../Interactables/Window/Controller")

[node name="PlayerManager" type="Node" parent="System" node_paths=PackedStringArray("camera", "screen_fx")]
script = ExtResource("10_k0fsr")
base_heart_rate = 90.0
hr_up_of_change = 2.2
vignette_curve = SubResource("Curve_aaaiw")
tick_down_ms = 0.8
sanity_up_rate_of_change = 0.8
hr_tick_per_ms = 0.7
camera = NodePath("../../Lights&Cams/PhantomCamera3D")
screen_fx = NodePath("../../Lights&Cams/VignetteScreen")

[node name="TimeSystem" type="Node" parent="System" node_paths=PackedStringArray("laptop")]
script = ExtResource("11_vfrrt")
start_hour = 5
start_minute = 30
end_hour = 5
end_minute = 40
delta_time_ms = 1.0
laptop = NodePath("../../MouseListener/LaptopContainer/MainLaptop")

[node name="Debugerr" parent="System" node_paths=PackedStringArray("door", "window", "tv", "door_entity", "tv_entity", "window_entity", "player_state", "room_state", "time_state") instance=ExtResource("15_ao232")]
door = NodePath("../../Interactables/Door/Controller")
window = NodePath("../../Interactables/Window/Controller")
tv = NodePath("../../Interactables/TV/Controller")
door_entity = NodePath("../../Interactables/Door/EntityHandler")
tv_entity = NodePath("../../Interactables/TV/EntityHandler")
window_entity = NodePath("../../Interactables/Window/EntityHandler")
player_state = NodePath("../PlayerManager")
room_state = NodePath("../RoomSystem")
time_state = NodePath("../TimeSystem")

[node name="EntityManager" type="Node" parent="System" node_paths=PackedStringArray("player_system")]
script = ExtResource("17_nm3el")
player_system = NodePath("../PlayerManager")
_01_charge_interval = Vector2(10, 15)

[connection signal="interact_slot" from="MouseListener/OneOpenSlot" to="Interactables/Door" method="_laptop_slot_interacted"]
[connection signal="interact_slot" from="MouseListener/OneOpenSlot" to="Interactables/Window" method="_laptop_slot_interacted"]
[connection signal="interact_slot" from="MouseListener/OneOpenSlot" to="Interactables/TV" method="_laptop_slot_interacted"]
[connection signal="interact_slot" from="MouseListener/OneOpenSlot" to="MouseListener" method="_laptop_slot_interacted"]
[connection signal="locked_slot" from="MouseListener/OneOpenSlot" to="Interactables/Door" method="_unlock_input_listen"]
[connection signal="locked_slot" from="MouseListener/OneOpenSlot" to="Interactables/Window" method="_unlock_input_listen"]
[connection signal="locked_slot" from="MouseListener/OneOpenSlot" to="Interactables/TV" method="_unlock_input_listen"]
[connection signal="locked_slot" from="MouseListener/OneOpenSlot" to="MouseListener" method="_hide_laptop"]
[connection signal="left_screen_hovered" from="MouseListener/ListenBoard" to="System/CameraController" method="left_screen_is_hovered"]
[connection signal="right_screen_hovered" from="MouseListener/ListenBoard" to="System/CameraController" method="right_screen_is_hovered"]
[connection signal="screen_hovered_out" from="MouseListener/ListenBoard" to="System/CameraController" method="idle_screen"]
